refactor: ajustado applicação